methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:7: error: type mismatch;
 found   : java.awt.Color
 required: Boolean
    var Couleur :Boolean = getCouleurSol()
                                        ^SlugTracking:10: error: type mismatch;
 found   : Unit
 required: Boolean
      avance()
            ^SlugTracking:12: error: type mismatch;
 found   : Unit
 required: Boolean
      gauche()
            ^