methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  if (estFaceMur() == true) {
    return false
  };else { 
    avance()
    var Couleur :Boolean = getCouleurSol()
    recule()
    if (Couleur == Color.green) {
      avance()
    }else {
      gauche()
    }
  }
}     
